# data-product-browser

./: .env.bak  .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.claude/: launch.json
docs/: architecture.md  browser-ui.md  configuration.md
docs/fixes/: business-glossary-related-table-realign.sql  column-catalogue-view.replace.sql  column-metadata-apply-descriptions.sql  column-metadata-gap-report.sql  exclude-staging-from-lineage.sql  temporal-current-views.sql  trust-engine-rule-notes.md  view-column-type-seed.sql  view-column-type-table.ddl.sql
docs/sessions/: pr-feat-collapsible-recipes-and-fixes.md  pr-feat-cookbook-pop-and-is-batch.md  pr-feat-cookbook-tab.md  pr-feat-erd-tab.md  pr-feat-favicon.md  pr-feat-glossary-qualified-name-fix.md  pr-feat-live-standard-alignment.md  pr-feat-local-server-browser.md  pr-feat-operations-dashboard.md  pr-feat-realign-legacy-renderers.md  pr-feat-rebrand-data-product-browser.md  pr-feat-trust-banner-and-schema-debug.md  pr-feat-wire-view-metadata.md
scripts/: _preview_harness.py
src/data_product_browser/: __init__.py  cli.py  collector.py  config.py  exceptions.py  models.py
src/data_product_browser/renderers/: cookbook.py  erd.py  jupyter.py  ops_dashboard.py  sql_highlight.py  svg.py
src/data_product_browser/server/: __init__.py  app.py  service.py
src/data_product_guide/: __init__.py  cli.py  collector.py  exceptions.py  models.py
src/data_product_guide/renderers/: cookbook.py  erd.py  (+4 more)
src/tdp_reporter/: __init__.py  cli.py  collector.py  models.py
tests/: test_models.py  test_server.py
(+11 files in other folders)
