[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "data-product-browser"
version = "0.1.0"
description = "Generate AI-Native Data Product artefacts (Cookbook, Ops Dashboard) from Teradata metadata"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "teradatasql>=20.0",
    "pydantic>=2.0",
    "jinja2>=3.1",
    "pygments>=2.17",
    "typer[all]>=0.12",
    "python-dotenv>=1.0",
    "keyring>=25.0",
    "ftfy>=6.0",
]

[project.scripts]
data-product-browser = "data_product_browser.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/data_product_browser"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
